# content-factory

./: .env.example  .gitignore  README.md
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 202603170001_initial_core_schema.py
apps/api/src/: main.py
apps/api/src/app/: main.py
apps/api/src/app/core/: config.py  observability.py
apps/api/src/app/domain/ingestion/: __init__.py  connectors.py  registry.py  runner.py
apps/api/src/app/domain/processing/: __init__.py  clusterer.py  deduplicator.py  explainer.py  normalizer.py  relevance_filter.py  scorer.py
apps/api/src/app/domain/runs/: __init__.py  state_machine.py
apps/api/src/app/infrastructure/db/: __init__.py  models.py  (+2 more)
apps/api/src/app/services/: __init__.py  briefing_summarizer.py  dashboard_briefing.py  trend_pipeline.py
apps/api/tests/: test_candidate_details_api.py  test_candidates_api.py  test_collector_contracts.py  test_dashboard_briefing_api.py  test_database_session.py  test_google_trends_collector.py  test_hackernews_collector.py  test_health.py  test_ingestion_runner.py  test_labels_api.py  test_producthunt_collector.py  test_profile_api.py  test_reddit_collector.py  test_run_api.py  test_run_state_machine.py  test_schema_models.py  test_signal_clusterer.py  test_signal_deduplicator.py  test_signal_normalizer.py  test_signal_relevance_filter.py  test_source_registry.py  test_topic_explainer.py  test_topic_labels_api.py  test_topic_scorer.py  test_trend_pipeline_integration.py  test_youtube_collector.py
(+62 files in other folders)
