[project]
name = "content-factory-api"
version = "0.1.0"
description = "Trend discovery API service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.117.0",
  "uvicorn>=0.36.0",
  "pydantic>=2.11.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
